fixed footer - front end

--- a/templates/includes/_footer.html
+++ b/templates/includes/_footer.html
@@ -3,5 +3,6 @@
     <form class="form-inline">
     <p>This project was created in reference to the QA Learning Academy Training Based Project Specification: Fundamental Project Specification - DevOps Core. 
         This Project meets all of the specifications of said documents and fully displays the ability of the creator.</p>
+    <p>By David Hulsman</p>
     </form>
   </footer>
